# shellyme

./: LICENSE  README.md  pyproject.toml
src/ShellyPy/: gen3.py  wrapper.py
src/shellyme/: shellyme.py
