[project]
name = "shellyme"
version = "1.0.0"
description = "Shellyme CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    # "ShellyPy==0.3.0"
]

[project.scripts]
shellyme = "shellyme.shellyme:cli"

[build-system]
# Flit Core is a lightweight tool designed to simplify the process of packaging and distributing Python projects
# following PEP 517
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"